# hfmc

./: CMakeLists.txt  README.md  huffman.cpp  huffman.h  main.cpp
common/: code_table.h  freq_table.h
compress/: common.h  compress.cpp  compress.h  compress_ui.cpp  compress_ui.h  huffman_tree.h
extract/: extract.cpp  extract.h  extract_ui.cpp  extract_ui.h
navigator/: navigator_ui.cpp  navigator_ui.h
